--- a/.gitignore
+++ b/.gitignore
@@ -34,11 +34,16 @@ captures/
 
 # Intellij
 *.iml
+.idea/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+
+*/gradle/wrapper/
+*/gradlew
+*/gradlew.bat
 
 # Keystore files
 *.jks
