Immplemented add coin, partially wallet view #2 (I failed at prev. push)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
                 <action android:name="android.intent.action.GRAPH" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddCurrencyActivity"
+            android:label="Add Crypto Currency">
+        </activity>
     </application>
 
 </manifest>
