--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.jjoe64:graphview:4.2.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 buildscript {
