--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/title_main_activity"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -25,9 +25,9 @@
                 <action android:name="android.intent.action.GRAPH" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddCurrencyActivity"
-            android:label="Add Crypto Currency">
-        </activity>
+        <activity
+            android:name=".AddCurrencyActivity"
+            android:label="Add Crypto Currency" />
     </application>
 
 </manifest>
